--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
             <p class="topPara">  6 מיליון  יהודים נרצחו בשואה על ידי הנאצים  רק בגלל  היותם יהודים.
                 ביום יום כולנו מאוד עסוקים ויש יום אחד בשנה שבו אנחנו יכולים כולם להתייחד לזכר הנרצחים.</p>
             <p class="middlePara"> אני מזמין אתכם להדליק נר דיגיטלי עבור הנספים</p>
-            <p class="bottonPara">התהליך יכול לקחת מספר שניות
+            <p class="bottonPara">התהליך יכול לקחת מספר שניות.</p>
 
-                600 נרות - לכל  10000 נרצחים נדליק נר
-                100 נרות - לכל 15000 ילדים שנרצחו נדליק נר</p>
+            <p class="bottonPara">לכל 10000 יהודים שנספו בשואה ניתן להדליק 600 נרות.  </p>
+            <p class="bottonPara">לכל 15000 ילדים שנספו בשואה נדליק 100 נרות.</p>  
+            
         </section>
 
         <section class="btnContainer">
