--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img class="magen" src="assets/_Group_ (1) 1.png" alt="magenDavid">
         <section class="infoContainer">
             <h1 class="mainHeading">יום השואה 2022</h1>
-            <p class="topPara">  6 מיליון  יהודים נרצחו בשואה על ידי הנאצים  רק בגלל  היותם יהודים.
+            <p class="topPara">  שישה מיליון  יהודים נרצחו בשואה על ידי הנאצים  רק בגלל  היותם יהודים.
                 ביום יום כולנו מאוד עסוקים ויש יום אחד בשנה שבו אנחנו יכולים כולם להתייחד לזכר הנרצחים.</p>
             <p class="middlePara"> אני מזמין אתכם להדליק נר דיגיטלי עבור הנספים</p>
             <p class="bottonPara">התהליך יכול לקחת מספר שניות.</p>
