--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <p class="middlePara"> אני מזמין אתכם להדליק נר דיגיטלי עבור הנספים</p>
             <p class="bottonPara">התהליך יכול לקחת מספר שניות.</p>
 
-            <p class="bottonPara">לכל 10000 יהודים שנספו בשואה ניתן להדליק 600 נרות.  </p>
-            <p class="bottonPara">לכל 15000 ילדים שנספו בשואה נדליק 100 נרות.</p>  
+            <p class="bottonPara">לכל 10000 יהודים שנספו בשואה ניתן להדליק נר, לחצו על הכפתור 600.  </p>
+            <p class="bottonPara">לכל 15000 ילדים שנספו בשואה ניתן להדליק נר, לחצו על הכפתור 100.</p>  
             
         </section>
 
