--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <img class="magen" src="assets/_Group_ (1) 1.png" alt="magenDavid">
         <section class="infoContainer">
             <h1 class="mainHeading">יום השואה 2022</h1>
-            <p class="topPara">  שישה מיליון  יהודים נרצחו בשואה על ידי הנאצים  רק בגלל  היותם יהודים.
-                ביום יום כולנו מאוד עסוקים ויש יום אחד בשנה שבו אנחנו יכולים כולם להתייחד לזכר הנרצחים.</p>
+            <p class="topPara">  שישה מיליון  יהודים נספו בשואה על ידי הנאצים  רק בגלל  היותם יהודים.
+                ביום יום כולנו מאוד עסוקים ויש יום אחד בשנה שבו אנחנו יכולים כולם להתייחד לזכר הנפסים.</p>
             <p class="middlePara"> אני מזמין אתכם להדליק נר דיגיטלי עבור הנספים</p>
             <p class="bottonPara">התהליך יכול לקחת מספר שניות.</p>
 
-            <p class="bottonPara">לכל 10000 יהודים שנספו בשואה ניתן להדליק נר, לחצו על הכפתור 600.  </p>
-            <p class="bottonPara">לכל 15000 ילדים שנספו בשואה ניתן להדליק נר, לחצו על הכפתור 100.</p>  
+            <p class="bottonPara">לכל ששת מיליון הנספים, יש ללחוץ על 600 נרות, נר אחד לכל 10000 נספים </p>
+            <p class="bottonPara">לכל מיליון וחצי ילדים הנספים, יש ללחוץ על 100 נרות, נר אחד לכל 15000 נספים </p>  
             
         </section>
 
