--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="infoContainer">
             <h1 class="mainHeading">יום השואה 2022</h1>
             <p class="topPara">  שישה מיליון  יהודים נספו בשואה על ידי הנאצים  רק בגלל  היותם יהודים.
-                ביום יום כולנו מאוד עסוקים ויש יום אחד בשנה שבו אנחנו יכולים כולם להתייחד לזכר הנפסים.</p>
+                ביום יום כולנו מאוד עסוקים ויש יום אחד בשנה שבו אנחנו יכולים כולם להתייחד לזכר הנספים.</p>
             <p class="middlePara"> אני מזמין אתכם להדליק נר דיגיטלי עבור הנספים</p>
             <p class="bottonPara">התהליך יכול לקחת מספר שניות.</p>
 
